Revised by expanding some writing and layout updates

--- a/responsetoreviewers.tex
+++ b/responsetoreviewers.tex
@@ -23,7 +23,7 @@ Whilst we do not question that there exists a relation of the proposed DAAE and 
 
 {\color{blue} Some benefits of the proposed method are highlighted when presenting the method but not well supported in the experiments. }\\
 
-We agree with this statement, and have now performed much more extensive experiments in the widely used celebA dataset. {\color{red} We have performed attribute classification experiments and achieve competitive or superior performance in synthesis and classification compared to the AAE and VAE. In addition, because the field is moving fast, we also provide performance comparisons to the $\beta$-VAE and DIP-VAE.\\
+We agree with this statement, and have now performed much more extensive experiments in the widely used celebA dataset. We have performed attribute classification experiments and achieve competitive or superior performance in synthesis and classification compared to the AAE and VAE. In addition, because the field is moving fast, we also provide performance comparisons to the $\beta$-VAE and DIP-VAE.\\
 
 %\hl{We have introduced tests on robustness to specific image transforms for classification, and we believe these reflect real and non-trivial performance benefits.} \\
 
@@ -42,13 +42,13 @@ We have moved the MNIST results to an appendix. Extensive experiments have now b
 The paragraph ``Two broad approaches ...'' (Line 55-60, Column 1, Page 1) should be clarified. For 1), it is better to include some references. }  \\
 
 We have added references to three papers that use the denoising criterion to train autoencoders.
-These are {\color{red} vincent2010stacked, bengio2013generalized, vincent2008extracting}.  The sentence now reads:\\
+These are {\color{red} vincent2010stacked, bengio2013generalized, vincent2008extracting}.  The sentence now begins:\\
 
-{\color{red} Two broad approaches to learning state-of-the-art generative models that do not require labelled training data include: 1) introduction of a denoising criterion \{vincent2010stacked, bengio2013generalized,  vincent2008extracting\} -- where the model learns to reconstruct clean samples from corrupted ones;}\\
+Two broad approaches to learning state-of-the-art generative models that do not require labelled training data include: 1) introduction of a denoising criterion \{vincent2010stacked, bengio2013generalized,  vincent2008extracting\} -- where the model learns to reconstruct clean samples from corrupted ones;\\
 
 {\color{blue} For 2), both VAEs [6] and GANs [13] use a latent space with a known prior distribution for generation. However, GANs [13] do not regularize the latent space while VAEs [6] do but directly for the training of the recognition model instead of the generative model.}\\
 
-We agree with this. Our initial intention in writing the sentence was to point out that VAEs and GANs both have some constraints on latent space: GANs through the latent space arising from noise sources, and VAEs in the sense of having priors placed on latent space. We realise that this is potentially misleading, so we have removed the phrase ``latent space with a known prior distribution''. \\
+We understand the concern. Our initial intention in writing the sentence was to point out that VAEs and GANs both have some constraints on latent space: GANs through the latent space arising from noise sources, and VAEs in the sense of having priors placed on latent space. We realise that this is potentially misleading, so we have removed the phrase ``latent space with a known prior distribution''. \\
 
 {\color{blue} The author should be careful about the correctness of ``regularisation ... [1], [9], [13] or using … [6], [9], [13]'' and clarify the writing.} \\
 
@@ -68,7 +68,7 @@ We agree that not all autoencoders are probabilistic, but they are often referre
        In this paper we will therefore also refer to the recognition model $q_\phi(z|x)$ as a probabilistic encoder, since given a datapoint x it produces a distribution (e.g. a Gaussian) over the possible values of the code z from which the datapoint x could have been generated. In a similar vein we will refer to $p_\theta(x|z)$ as a probabilistic decoder, since given a code z it produces a distribution over the possible corresponding values of x.
     \end{quote}
 
-We have purposefully used notation consistent with Kingma et al. [9]. Of course, in a sense, probabilistic autoencoders generalise (and include, as a clear subset) non-probabilistic ones, and our intention was to be {\em general} in this paper because it allows us to unify the treatment, and therefore compare different approaches to creating autoencoders. \\
+We have purposefully used notation consistent with Kingma et al. [9]. Of course, in a sense, probabilistic autoencoders generalise (and include, as a clear subset) non-probabilistic ones, and our intention was to be {\em general} in this paper because it allows us to unify the discussion of autoencoders, and helps us to compare different approaches to creating autoencoders. \\
 
  {\color{blue}I also note that subsection C introduces VAEs again, which may be redundant. On the other hand, both the encoders and decoders in VAEs are trained jointly instead of ``first learning … form a training set … trained in a supervised fashion.'' I seriously suggest the authors to present the literature carefully and precisely.}\\
 
@@ -84,7 +84,7 @@ In [4], there is no latent space in the same sense as that for VAEs or GANs. To 
 \begin{quote}
     In some situations the encoding distribution is chosen rather than learned \{bengio2013generalized\}, in other situations the encoder and decoder are learned simultaneously \{kingma2013auto, makhzani2015adversarial, im2015denoising\}
 \end{quote}
-Why did we do this?  It allowed us to treat encoding in the most general way, so that we can bring the approach suggested in [4] under the same umbrella as other models. Doing this also allows us to acknowledge Bengio's DAE, but also to distinguish between the ``corruption'' of that model and the noise process of our proposed DAAE more clearly. For example, the approach of [4] does not explicitly define a latent space.  It is also worth pointing out that taking Bengio's corruption process [4] to the extreme is equivalent to having a latent representation which is Gaussian noise \{bachman2015variational\}; so this way of thinking seems to be self-consistent.\\
+Why did we do this?  It allowed us to treat encoding in the most general way, so that we can bring the approach suggested in [4] under the same umbrella as other models. Taking this approach not only allows us to acknowledge Bengio's DAE, but also to distinguish between the ``corruption'' of that model and the noise process of our proposed DAAE more clearly. For example, the approach of [4] does not explicitly define a latent space.  It is also worth pointing out that taking Bengio's corruption process [4] to the extreme is equivalent to having a latent representation which is Gaussian noise \{bachman2015variational\}; so, this way of thinking seems to be self-consistent and flexible.\\
 
 
 {\color{blue}
@@ -109,7 +109,7 @@ Our choice of datasets was explained in Section VI.B of the original submission.
     \item Kingma's VAE paper presents {\color{red}syntheis} results on Fray and MNIST.
     \item the DVAE paper contains no images at all
 \end{itemize}. 
-Notwithstanding this, in the revised paper, we have now included synthesized examples of colour faces. For ease of reference, we show some examples of synthesized images below:\\
+Notwithstanding this, in the revised paper we have now included synthesized examples of colour faces. For ease of reference, we show some examples of synthesized images below:\\
 
 {\color{red} TODO -- use figures finally used in paper}
 
@@ -125,14 +125,13 @@ The reconstruction results are not so interesting and some of them can be remove
 
 % We are not sure we understand \hl{the point}.  We have however significantly increased the evaluation, both by demonstrating high-quality synthesis results (see, for exampe XX and YY), and by including evaluation of robustness (shift tolerance and classification performance from latent space).\\
 
-We now give motivation for reconstruction, we have included the following paragraph to justify these experiments:
+Though we have removed some reconstruction results, we now give motivation for maintaining an examination of reconstruction. We have included the following paragraph to justify these experiments:
 
 \begin{quote}
 We are interested in reconstruction for several reasons. The first is that if we wish to use encodings for down stream tasks, for example classification, a good indication of whether the encoding is modeling the sample well is to check the reconstructions. For example if the reconstructed image is missing certain features that were present in the original images, it may be that this information is not preserved in the encoding. The second reason is that checking sample reconstructions is also a method to evaluate whether the model has overfit to test samples. The ability to reconstruct samples not seen during training suggests that a model has not overfit. The final reason, is to further motivate AAE, DAAE and iDAAE models as alternatives to GAN based models that are augmented with encoders \{li2017alice\}, for down stream tasks that require good sample reconstruction.
 \end{quote}
 
 We have, however, provided significant improvements in the evaluation of the two proposed models by including experiments on facial attribute classification on colour faces.
-
 
 
 {\color{blue}
@@ -151,9 +150,9 @@ We were aware of the literature [1] and did cite Theis, in the last paragraph VI
 \begin{quote} Finally, evaluating generated samples is challenging: log-likelihood is not always reliable cite\{theis2015note\}, and qualitative analysis is subjective. For this reason, we provided both quantitative and qualitative results to communicate the benefits of introducing Markov chain sampling when a trained DAAE, and the advantages of iDAAEs over AAEs. 
 \end{quote}
 
-For this reason, we provided both quantitative and qualitative results to communicate the benefits of introducing Markov chain sampling with a DAAE, and the advantages of iDAAEs over AAEs. We have also introduced new ways of communicating the results of image synthesis which are easier to interpret, and we home makes the contributions clearer, even given the limitations of log-likelihood as a means of evaluation. We hope that the revised version of the paper -- with improved face synthesis and experiments on facial attribute classification -- further emphasises the improvements afforded by the proposed DAAE and iDAAE.\\
+For this reason, we provided both quantitative and qualitative results to communicate the benefits of introducing Markov chain sampling with a DAAE, and the differences and advantages of iDAAEs compared to AAEs. We have also introduced new ways of communicating the results of image synthesis which are easier to interpret, and we home makes the contributions clearer, even given the limitations of log-likelihood as a means of evaluation. We hope that the revised version of the paper -- with improved face synthesis and experiments on facial attribute classification -- further emphasises the improvements afforded by the proposed DAAE and iDAAE.\\
 
-We would also like to emphasise once again, the usefulness of the Omniglot dataset, which contains a testing dataset with examples of {\em entire alphabets} that are completely absent from the training data. We have since created a new visualisation of these results, to emphasise that they correspond to separate datasets in Omniglot. Notably (and this is something that enforces the reviewers point):
+We would also like to emphasise the usefulness of the Omniglot dataset, which contains a testing dataset with examples of {\em entire alphabets} that are completely absent from the training data. We have since created a new visualisation of these results, to emphasise that they correspond to separate datasets in Omniglot. Notably (and this is something that enforces the reviewers point):
 
 \begin{itemize}
     \item if we evaluate log-likelihood on samples from alphabets that are different to those in the training data, the log-likelihood values get {\em worse} with an extended number of iterations
@@ -173,9 +172,8 @@ The main advantage of the proposed method over DVAEs is providing the flexibilit
 
 
 {\color{red} LETS DISCUSS THIS STILL}
-Good question!  The reason is that by supporting mixtures of Gaussians, one can encourage latent space to have an organisation that mirrors the semantic aspects that one wishes to represent in the data. To be clear, we do not suggest {\em replacing} high-dimensional Gaussians, but instead suggest using mixtures of high-dimensional Gaussians.   To take a very simple case, if we have an observation space that is clearly bimodal (containing dogs and cats), then it would seem imminently sensible that latent space should have a distribution that reflects this \hl{need an example for which $z_k$ ``label'' separability is a bad idea vs multimodal version}.\\
+To be clear, we do not suggest {\em replacing} high-dimensional Gaussians, but instead suggest using mixtures of high-dimensional Gaussians.  The reason is that by supporting mixtures of Gaussians, one can encourage latent space to have an organisation that mirrors the semantic aspects that one wishes to represent in the data.  To take a very simple case, if we have an observation space that is clearly bimodal (containing dogs and cats), then it would seem imminently sensible that latent space should have a distribution that reflects this \hl{need an example for which $z_k$ ``label'' separability is a bad idea vs multimodal version}.\\
 
- 
 Further, note that the distribution of encoded samples in the DAAE is a mixture of Gaussian. In the original paper we stated this:
 
 \begin{quote}
@@ -209,12 +207,14 @@ Though the sampling method proposed do not rely on a given data but it is still 
 
 
 \begin{itemize}
-    \item In this paper we identify an issue related to drawing samples from these models, which also applies to the DVAE
+    \item 
     \item We propose methods to overcome these issues, and explain why it may be difficult to obtain visually plausible image samples from some denoinsing autoencoders.
-    \item {\color{red} The purpose of the image samples is to demonstrate the issue and demonstrate empiracly that our approach addresses the issue.}
+    \item {\color{red} The purpose of the image samples is to demonstrate the issue and demonstrate empirically that our approach addresses the issue.}
 \end{itemize}
 
-{\color{red} \textbf{TIDY UP} In our revised paper, to empasise these points, we include empirical PDFs of distributions of encoded data samples, $q_\phi(z|x)$, encoded corrupted data samples $q_\phi(z|\tilde{x})$ and the prior $p(z)$, to shown the miss match between distributions, $q_\phi(z|x)$ and $p(z)$ when using the DAAE.}
+In the original paper, we identified  an issue related to drawing samples from these models, which also applies to the DVAE.
+
+In our revised paper, to emphasise these points, we have now included a new Figure pair that shows estimates of the empirical PDFs of distributions of encoded data samples, $q_\phi(z|x)$, encoded {\em corrupted} data samples $q_\phi(z|\tilde{x})$, and the prior $p(z)$ placed upon latent space.  This figure pair -- drawn from the trained models of the CelebA database -- show an obvious mismatch between distributions, $q_\phi(z|x)$ and $p(z)$ when using the DAAE. \hl{Toni: logical flaw here: the difference should not be between two things you propose to address the criticism of the reviewer, but between (say) a DVAE and the iDAAE.  I do not agree with showing the emp. PDFs from the DAAE and the iDAAE -- this shows the difference between them. But this is not what the reviewer has criticised.  Is it possible to get emp. PDF from something *like* the DVAE or AAE?} 
 
 
 Minor things: \newline
@@ -270,40 +270,35 @@ This work introduces two new types of denoising autoencoders, DAAE and iDAAE. Th
 \end{itemize}
 
 {\color{red}
-In our revised version we have encorporated additional experiments on the CelebA dataset, which required us to extend the fully connected AAE to a convolutional version, with similar architecture to the DCGAN, we include the following in our revised paper:
+In our revised version we have incorporated additional experiments on the CelebA dataset, which required us to extend the fully connected AAE to a convolutional version. we include the following in our revised paper:
 
 \begin{quote}
 For the CelebA dataset $3$ types of model were trained: an AAE, a DAAE and an iDAAE. The models were constructed with convolutional layers, rather than fully connected layers since the CelebA dataset is more complex than the Toronto face dataset use by Makhzani et al. \{makhzani2015adversarial\}. The encoder and decoder consisted of $4$ convolutional layers with a similar structure to that of the DCGAN proposed by Radford et al. \{radford2015unsupervised\}. We used a $3$-layer fully connected network for the discriminator. 
 \end{quote}
-}
 
 {\color{blue}
 (2) In Section V.A., please indicate the specific nonlinear activation functions you used in the intermediate layers of the network.}\newline
 
-\begin{itemize}
-    \item We use ReLU's
-    \item We have included this as follows:
+
+We use ReLU's. We have included information on this as follows:
     \begin{quote}
         Rectifying Linear Units (ReLU) were used between all intermediate layers to encourage the networks to learn representations that capture multi-modal distributions. \newline
         ... \newline
         Intermediate layers of the network have ReLU activation functions to encourage the network to capture highly non-linear relations
     \end{quote}
-\end{itemize}
+
 
 {\color{blue}
 (3) How sensitive are your models to changes in the parameter configuration? Is extensive parameter tuning required in order to achieve your reported results?}\newline
 
-\begin{itemize}
-    \item We did very little hyper parameter tuning. To make our comparisons as ``fair'' as possible we use the same hyper parameters for each experiment, and the choice for hyper-parameters was based on previous work:
+
+We did very little hyper parameter tuning. To make our comparisons as ``fair'' as possible we use the same hyper parameters for each experiment, and the choice for hyper-parameters was based on previous work:
     
     \begin{quote}
         In  order  to  compare  models trained on the same datasets, the same network architectures, batch size, learning rate, annealing rate, size of latent code and number of epochs is used for each
     \end{quote}
-      
-\end{itemize}
 
-{\color{red}
-For the additional CelebA experiments, since an AAE had not been trained on the CelebA dataset using our proposed architecture, a more extensive hyper parameter search was performed. This is detailed in the revised paper as follows:
+However, in the revised submission, in which we now include a significant number of CelebA experiments, we have had to train an AAE had not been trained on the CelebA dataset using our proposed architecture. For this, a more extensive hyper parameter search was performed. This is detailed in the revised paper as follows:
 
 \begin{quote}
 Networks were trained for $100$ epochs with a batch size of $64$ using RMSprop with learning rate $1 \time 10^{-4}$ and momentum of $0.1$ for training the discriminator. We found that using smaller momentum values lead to more blurred images, however larger momentum values prevented the network from converging and made training unstable. When using Adam instead of RMSprop (on the CelebA dataset specifically) we found that the values in the encodings became very large, and not consistent with the prior. The encoding is made up of $200$ units and the prior $200$D Gaussian. The corruption process used to train the DAAE and iDAAE was additive Gaussian noise. We experimented with different noise level, $\sigma$ between $[0.1, 1.0]$, we found several values in this range to be suitable. For our classification experiments we fixed $\sigma=0.25$ and for synthesis from the DAAE, to demonstrate the effect of sampling, we used $\sigma=1.0$. For the iDAAE we experimented with $M=2, 5, 20, 50$. We found that $M < 5$ (when $\sigma=1.0$), was not sufficient to train an iDAAE. By comparing histograms of encoded data samples to histograms of the prior, for an iDAAE trained with a particular $M$ value, we are able to see whether $M$ is sufficiently larger or not. We found $M=5$ to be sufficiently large.
@@ -328,10 +323,8 @@ We deliberately describe the method in a very general framework. The models $q_\
 {\color{blue}
 (6) In Section VI.D., you state ``The reconstruction is evaluated by computing the mean squared error between the reconstruction and the original sample.'' Please clarify if ``original sample'' means the uncorrupted withheld test data. The uncorrupted data should be used to evaluate the quality of the reconstruction across all methods in order to provide an accurate comparison, regardless of whether the samples were corrupted going into the model.}\newline
 
-\begin{itemize}
-    \item We agree, all experiments should have been performed on uncorrupted data
-    \item We have now done this and updated the reconstruction values which are shown in Table IV.
-\end{itemize}
+
+We agree. All experiments should have been performed on uncorrupted data. We have now done this and updated the reconstruction values which are shown in \hl{Table IV}.
  
 We have also clarified the writing in the revised version:
 \begin{quote}
@@ -342,12 +335,11 @@ The reconstruction task involves passing samples from the test dataset (i.e. a s
 {\color{blue}
 (7) There is no comparison in training times between the different methods. A comparison of both performance and training complexity is needed to evaluate the practical merits of this work. Ideally this should be provided for all of the methods you considered as well as a standard autoencoder without regularisation or adversarial training. This is particularly important to consider given how close your proposed methods are in performance to much simpler methods like PCA.}\newline
 
-\begin{itemize}
-    \item Standard autoencoders may not be used for sample synthesis
-    \item {\color{red} TO TIDY: Training time will vary based on resource available, choice of framework and machine. The additional computation cost from corruption is minimal, and the computational cost assocated with the adversarial loss is dependant on the size of the discriminator. Comparison of training time is likely to be less meaninful. Instead, we had added additional results to demonstate the benefits of using DAAE or iDAAE compared to other state of art models.}
-\end{itemize}
+Standard autoencoders may not be used for sample synthesis
 
-In our revised version, we include facial attribute classification experiments which compare our model to state-of-the-art models rather than PCA, which we hope motivates the models further. Experiments are now comparable with very recent work in this field {\color{red} Citations needed here.}
+ It is becoming rather rare in this field to include information on training time, which will vary based on resource available, choice of framework and machine. The additional computation cost from corruption is minimal (compared to, say, a vanilla AAE, and the computational cost associated with the adversarial loss is dependant on the size of the discriminator. Comparison of training times are likely to be less meaningful. Instead, we had added additional results to demonstrate the benefits of using DAAE or iDAAE compared to other state of art models.
+
+In the revised version, we include facial attribute classification experiments which compare our model to state-of-the-art models rather than PCA, which we hope motivates the models further. Experiments are now comparable with very recent work in this field \hl{Citations needed here.}
 
 \section{Reviewer: 3}
 
@@ -361,7 +353,7 @@ The main concerns regarding the paper are about the experimental section. Althou
 
 \begin{itemize}
     \item It has already be shown by Makhzani, the benefits of using adversarial rather than KL to match a prior in the case of AAE and VAE.
-    \item For this reason we did not make experiments comparing DVAE with DAAE a priority, rather we focused on comparing DAAE and AAE
+    \item For this reason we did not make experiments comparing DVAE with DAAE a priority, rather we focused on comparing DAAE and AAE. \hl{This second point appears completely out of sync with the reviewers comment.}
 \end{itemize}
 
 In our revised version we have performed additional experiments with the CelebA dataset of colour faces, performing facial attribute classification. We now compare results to those obtained for well known models including VAE and $\beta$-VAE. This is in alignment with methods of evaluation in the field.
@@ -386,8 +378,7 @@ Other comments: \newline
 {\color{blue}
 1. The first two paragraphs of the introduction are general and do not mention anything about neural networks although all the references are for papers related to NN. It would be better to either mention in the text that the authors are talking about NNs or to add some not NN references.}
 
-\begin{itemize}
-    \item We chose to present the model and theory in a more general framework and then show that neural networks may be used for implementation.
+We chose to present the model and theory in a more general framework and then show that neural networks may be used for implementation.
     
     In the last paragraph of section IV.B. in the original paper, we say:
     \begin{quote}
@@ -398,13 +389,12 @@ At the start of the next section, section V.A. we talk about the implementation 
     Under the autoencoder framework, $E_\phi(x)$ is the encoder and $R_\theta(z)$ is the decoder. We used fully connected neural networks for both the encoder and decoder.
 \end{quote}
 
-\item In figure 1, on page 1 where we present our model, the caption in the original paper says:
+Further, in Figure 1, on page 1 where we present our model, the caption in the original paper says:
 \begin{quote}
     Arrows in this diagram represent mappings implemented using trained neural networks.
 \end{quote}
-we refer to Figure 1, multiple times in the Introduction.
+and we refer to Figure 1, multiple times in the Introduction.
 
-\end{itemize}
 
 {\color{blue}
 2. In the list of references there are only 21 papers whereas in the text works are cited upto 24} \newline
@@ -423,17 +413,16 @@ We deliberately keep the method general. \newline
 {\color{blue}
 4. Section I.A Autoencoders do not have to be probabilistic generally speaking. It would be better to mention it and probabilistic interpretation is considered here.}
 
-\begin{itemize}
-    \item It is advantageous for us to talk about autoencoders as probabilistic models - since our notation follows that of a probabilistic framework
-    \item Further, VAE's introduced by Kingma et al. were introduced in a probabilistic framework, this is why we cite him, when introducing autoencoders in a probabilistic framework. 
+It is advantageous for us to talk about autoencoders as probabilistic models - since our notation follows that of a probabilistic framework. Further, VAE's introduced by Kingma et al. were introduced in a probabilistic framework, this is why we cite this work, when introducing autoencoders in a probabilistic framework: 
     \begin{quote}
     \textit{probabilistic encoder} cite\{kingma2013auto\}, $q_\phi(z|x)$, conditioned on observed samples, and a second \textit{probabilistic decoder} cite\{kingma2013auto\}
     \end{quote}
-    Kingma et al. introduce autoencoders as follows:
+
+Indeed, Kingma et al. introduce autoencoders as follows:
     \begin{quote}
         learning a \textit{probabilistic encoder} cite\{kingma2013auto\}, $q_\phi(z|x)$, conditioned on observed samples, and a second \textit{probabilistic decoder} cite\{kingma2013auto\},
     \end{quote} 
-\end{itemize}
+Please see our response to Reviewer 1 regarding the generality of a probabilistic treatment, under which deterministic autoencoders are merely a special case.
 
 {\color{blue}
 5. Section I.A. Last paragraph. It may be worth to add some references here.} \newline
@@ -445,8 +434,9 @@ We have added references as follows:
 {\color{blue}
 6. Please use the same tense citing other works: ``Bengio at al. [4] treat...'', ``Im at al. [8] showed...",``Im et al. [8] do not address...'', ``Makhzani et al. [13] introduced...''}\\
 
+
 {\color{red}
-We choose to use the present:
+We have updated the writing to be more consistent in the use of tenses:
 \begin{itemize}
     \item Im at al. [8] showed $\rightarrow$ Im at al. [8] show
     \item Makhzani et al. [13] introduced $\rightarrow$ Makhzani et al. [13] introduce (the rest of the paragraph was update to be in the present tense.)
@@ -455,8 +445,9 @@ We choose to use the present:
 }
 
 
+\hl{Toni -- I do not understand the point below}
 {\color{blue}
-7. Organisation of the paper. It is not clear why denoising autoencoders are reviewed in "Background" section whereas adversarial autoencoders are reviewed in "Related work" section.}
+7. Organisation of the paper. It is not clear why denoising autoencoders are reviewed in "Background" section whereas adversarial autoencoders are reviewed in "Related work" section.}\\
 
 \begin{itemize}
     \item Autoencoders are a more general framework
@@ -464,28 +455,28 @@ We choose to use the present:
 \end{itemize}
 
 {\color{blue}
-8. Section I.C. Last paragraph looks a bit odd especially given the first paragraph of Section I.D}
+8. Section I.C. Last paragraph looks a bit odd especially given the first paragraph of Section I.D}\\
 
-\begin{itemize}
-    \item At the end of section I.C. we are referring to the original VAE paper hence the citation to Kingma et al. - we are pointing out that they do not use denoising.
-    \item At the start of section I.D. we are beginning to introduce the work of Im et al. Cited in paragraph two if Section I.D. who introduce DVAEs, VAE's with denoising.
-\end{itemize}
+We thank the reviewer for the comment.  Perhaps this will clarify: At the end of section I.C. we are referring to the original VAE paper, hence the citation to Kingma et al. -- we are pointing out that the Kinga paper does not use a denoising principle.
+
+In contrast, at the start of section I.D. we are beginning to introduce the work of Im et al. Cited in paragraph two if Section I.D. who introduce DVAEs, which are VAE's with denoising.
+
+\hl{We should now say we have done something to clarify this -- will check on this at some point in the next few days.}\\
 
 {\color{blue}
-9. Section II.A. It is unclear why it is the only section uses notation w and v instead of x and z, moreover w and v are undefined}
+9. Section II.A. It is unclear why it is the only section uses notation w and v instead of x and z, moreover w and v are undefined}\\
 
-\begin{itemize}
-    \item The use of $v$ and $w$ instead of $x$ and $z$ was done deliberately.
-    \item Adversarial training is usually performed on data samples, $x$ rather than on latent samples, $z$. If we introduced adversarial training on the data, but then applied it to the latent this may have cause confusion in notation. If we had introduced directly for the latent, readers familiar with adversarial training may have been confused. 
-    \item For these reasons we deliberately introduce adversarial training with a general notation. 
-    \item We wanted to avoid calling samples, $w$ data samples and sample, $v$ latent samples. Instead we refer to samples $w$ as being from a ``target distribution''.
-    \item In our revised version we refer to $v$ samples as ``input samples'' coming from our chosen prior distribution $p(v)$ and generated $w$ samples as ``output samples''. We in our revised version we say:
+The use of $v$ and $w$ instead of $x$ and $z$ was done deliberately. Adversarial training is usually performed on data samples, $x$ rather than on latent samples, $z$. If we introduced adversarial training on the data, but then applied it to the latent space, this may have cause confusion in notation. If we had introduced directly for the latent space, readers familiar with adversarial training may have been confused. 
+
+For these reasons we deliberately introduce adversarial training with a general notation. We wanted to avoid calling samples, $w$ data samples and sample, $v$ latent samples. Instead we refer to samples $w$ as being from a ``target distribution''.
+
+To help avoid confusion, in our revised version we refer to $v$ samples as ``input samples'' coming from our chosen prior distribution $p(v)$ and generated $w$ samples as ``output samples''. In the revised version we say:
     
     \begin{quote}
         produce output samples, $w$ that match a target probability distribution $t(w)$. \newline ... \newline
         The generative model - fed with input samples $v$, drawn from a chosen prior distribution, $p(v)$ - is trained to generate output samples $w$ that are indistinguishable from target $w$ samples  
     \end{quote}
-\end{itemize}
+
 
 {\color{blue}
 10. Section IV.B. Second paragraph. ``... we used PREVIOUSLY in Algorithm 2 of the Appendix...'' - this is the first time this algorithm is mentioined and ``previously'' implies that a reader should have already been aware of it}
