update 7. to make more clear why we have background and related work

--- a/responsetoreviewers.tex
+++ b/responsetoreviewers.tex
@@ -445,13 +445,13 @@ We have updated the writing to be more consistent in the use of tenses:
 }
 
 
-\hl{Toni -- I do not understand the point below}
 {\color{blue}
 7. Organisation of the paper. It is not clear why denoising autoencoders are reviewed in "Background" section whereas adversarial autoencoders are reviewed in "Related work" section.}\\
 
 \begin{itemize}
-    \item Autoencoders are a more general framework
-    \item We specifically build on Adversarial autoencoders.
+    \item In the ``Background'' we talk about Autoencoders in a more general framework, this allows us to introduce many concpets in this framework.
+    \item Since our work specifically builds on Adversarial autoencoders, we have a specific section for discussing them, which we call ``Related work''. 
+    % Further, we wanted to introduce adversarial training and adversarial autoencoders seperately, since adversarial trainig is often associated with a discriminator acting on images space, rather than encoding space, if we had introduced adversarial training in the background it would have made more sense to discuss it in the context of image synthesis which may have lead to confusion.
 \end{itemize}
 
 {\color{blue}
